Update CSS and HTML

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" type="'text/css" href="{{ url_for('static',filename='styles/mainpage.css') }}"
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='stylesheet.css') }}">
 </head>
 <body>
 <h1>hello world</h1>
