--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,12 @@
     <title>Title</title>
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='stylesheet.css') }}">
 </head>
+
 <body>
+<script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script><script type="text/javascript" src="materialize/js/materialize.min.js"></script>
 <h1>hello world</h1>
+<a class="pure-button" href="#">A Pure Button</a>
+<button class="pure-button">A Pure Button</button>
 </body>
+
 </html>
