--- a/templates/index.html
+++ b/templates/index.html
@@ -7,8 +7,8 @@
 </head>
 
 <body>
-<script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script><script type="text/javascript" src="materialize/js/materialize.min.js"></script>
 <h1>hello world</h1>
+<!-- button -->
 <a class="pure-button" href="#">A Pure Button</a>
 <button class="pure-button">A Pure Button</button>
 </body>
