--- a/templates/mainpage.html
+++ b/templates/mainpage.html
@@ -3,14 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/pure-min.css" integrity="sha384-nn4HPE8lTHyVtfCBi5yW9d20FjT8BJwUXyWZT9InLYax14RDjBj46LmSztkmNP9w" crossorigin="anonymous">
+
 </head>
 <body>
 
-    <form action = "http://localhost:5000/weatheresult" method = "POST">
-
-         <p>When will it rain next in: <input type = "text" name = "text-box" placeholder = "Enter location" /></p>
-         <p><input type = "submit" value = "submit" /></p>
-
+    <form class="pure-form", action = "http://localhost:5000/weatheresult" method = "POST">
+        <!-- search box -->
+        <p>When will it  rain next in: <input type="text" name = "text-box" placeholder="Enter a location" required></p>
+        <!-- button -->
+        <button class="pure-button">Submit</button>
     </form>
 
 </body>
