--- a/static/weathericons.css
+++ b/static/weathericons.css
@@ -2,34 +2,6 @@
   box-sizing: border-box;
 }
 
-html {
-  height: 100%;
-  margin: 0;
-  padding: 0;
-  font-size: 18px;
-  font-family: Arial, sans-serif;
-}
-
-body {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  min-height: 100%;
-  margin: 0;
-  padding: 0;
-  color: #8f90a3;
-  background-color: white;
-}
 
 h2 {
   margin-bottom: 4rem;
@@ -54,11 +26,8 @@ h2 {
   right: 10%;
   border-radius: 50%;
   z-index: 2;
-  background-color: #f1c40f;
-  background-image: -webkit-radial-gradient(#f1c40f, #f39c12);
-  background-image: radial-gradient(#f1c40f, #f39c12);
-  box-shadow: 0 0 25px #917508;
 }
+
 .sunny:after,
 .partly_cloudy__sun:after {
   content: "";
@@ -199,16 +168,16 @@ h2 {
   background-image: -webkit-linear-gradient(transparent, #94cdd1);
   background-image: linear-gradient(transparent, #94cdd1);
   will-change: opacity, transform;
-  -webkit-animation: fadeIn 2s ease-out 0.4s infinite reverse, scaleUp 2s ease-out 0.4s infinite;
-          animation: fadeIn 2s ease-out 0.4s infinite reverse, scaleUp 2s ease-out 0.4s infinite;
+  -webkit-animation: fadeIn 2s ease-out .4s infinite reverse, scaleUp 2s ease-out .4s infinite;
+          animation: fadeIn 2s ease-out .4s infinite reverse, scaleUp 2s ease-out .4s infinite;
 }
 
 .thundery__cloud:before {
   background-color: #4d5656;
   background-image: -webkit-radial-gradient(#4d5656, #393c3c);
   background-image: radial-gradient(#4d5656, #393c3c);
-  -webkit-animation: thunder 4s linear 0.02s infinite alternate;
-          animation: thunder 4s linear 0.02s infinite alternate;
+  -webkit-animation: thunder 4s linear .02s infinite alternate;
+          animation: thunder 4s linear .02s infinite alternate;
 }
 .thundery__cloud:after {
   background-color: #4d5656;
@@ -218,12 +187,12 @@ h2 {
           animation: thunder 4s linear infinite alternate;
 }
 .thundery__rain:before {
-  -webkit-animation: fadeIn 0.5s ease-out infinite reverse, scaleUp 0.5s ease-out infinite;
-          animation: fadeIn 0.5s ease-out infinite reverse, scaleUp 0.5s ease-out infinite;
+  -webkit-animation: fadeIn .5s ease-out infinite reverse, scaleUp .5s ease-out infinite;
+          animation: fadeIn .5s ease-out infinite reverse, scaleUp .5s ease-out infinite;
 }
 .thundery__rain:after {
-  -webkit-animation: fadeIn 0.75s ease-out 0.2s infinite reverse, scaleUp 0.75s ease-out 0.2s infinite;
-          animation: fadeIn 0.75s ease-out 0.2s infinite reverse, scaleUp 0.75s ease-out 0.2s infinite;
+  -webkit-animation: fadeIn .75s ease-out .2s infinite reverse, scaleUp .75s ease-out .2s infinite;
+          animation: fadeIn .75s ease-out .2s infinite reverse, scaleUp .75s ease-out .2s infinite;
 }
 
 @-webkit-keyframes fadeIn {
