Change "rain" to "precipitate"

--- a/templates/mainpage.html
+++ b/templates/mainpage.html
@@ -22,7 +22,7 @@
     </label>
 
     <!-- search box -->
-    <p>When will it rain next in: <input type="text" name="text-box" placeholder="Enter a location"></p>
+    <p>When will it precipitate next in: <input type="text" name="text-box" placeholder="Enter a location"></p>
     <!-- button -->
     <button class="pure-button">Submit</button>
   </form>
