--- a/static/stylesheet.css
+++ b/static/stylesheet.css
@@ -7,3 +7,8 @@ h2 {
 
 }
 
+body {
+    background-size: cover;
+    background-image: url(http://files.all-free-download.com//downloadfiles/wallpapers/1600_1200/mountain_reflections_wallpaper_landscape_nature_1581.jpg);
+}
+
