--- a/templates/mainpage.html
+++ b/templates/mainpage.html
@@ -5,10 +5,11 @@
     <title>Title</title>
     <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/pure-min.css" integrity="sha384-nn4HPE8lTHyVtfCBi5yW9d20FjT8BJwUXyWZT9InLYax14RDjBj46LmSztkmNP9w" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='checkboxes.css') }}">
+
 </head>
 <body>
-
 <div style="text-align: center;">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='stylesheet.css') }}">
   <form class="pure-form" action="http://localhost:5000/weatheresult" method="POST">
     <!-- ***rain checkbox***  -->
     <label for="option-one" class="pure-checkbox">
